# loxpp

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: ast.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  token.hpp  tokens.hpp
tests/: CMakeLists.txt  lexing.cpp  tests.cpp
